updated header with roster, cleaned up some alt tags

--- a/roster/index.html
+++ b/roster/index.html
@@ -24,12 +24,12 @@
     <header class="header" data-expanded="false">
       <div class="logo">
         <a href="../">
-          <img src="../assets/images/header/header-logo.svg" alt="Logo">
+          <img src="../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
         </a>
       </div>
       <nav class="nav">
         <a href="../store">STORE</a>
-        <!-- <a href="../roster">ROSTER</a> -->
+        <a href="../roster">ROSTER</a>
         <a href="../about">ABOUT</a>
         <!-- <div class="cart-container">
           <div id="cart-button"></div>
@@ -37,7 +37,7 @@
       </nav>
       <div class="hamburger-icon">
         <button aria-label="Toggle Menu">
-          <img src="../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+          <img src="../assets/images/header/hamburger-icon.svg" alt="">
         </button>
       </div>
     </header>
@@ -53,7 +53,7 @@
           <a href="acid-baptism/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\acid-baptism\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\acid-baptism\roster-pic.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -66,7 +66,7 @@
           <a href="cryhard/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\cryhard\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\cryhard\roster-pic.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -79,7 +79,7 @@
           <a href="donovan-funk/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\donovan-funk\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\donovan-funk\roster-pic.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -92,7 +92,7 @@
           <a href="feverest/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\feverest\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\feverest\roster-pic.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -105,7 +105,7 @@
           <a href="foam/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\foam\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\foam\roster-pic.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -118,7 +118,7 @@
           <a href="idiot-mile/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\idiot-mile\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\idiot-mile\roster-pic.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -131,7 +131,7 @@
           <a href="pageant-dad/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\pageant-dad\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\pageant-dad\roster-pic.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -144,7 +144,7 @@
           <a href="panhandle/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\panhandle\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\panhandle\roster-pic.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -157,7 +157,7 @@
           <a href="powdr/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\powdr\band-pic1.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\powdr\band-pic1.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -170,7 +170,7 @@
           <a href="sweetest-pot/" class="artist-link">
             <div class="artist-block">
               <div class="artist-block-image-container">
-                <img src="../assets\images\roster\sweetest-pot\roster-pic.webp" alt="Roster Image" class="artist-block-image">
+                <img src="../assets\images\roster\sweetest-pot\roster-pic.webp" alt="" class="artist-block-image">
               </div>
               <div class="artist-block-details-container">
                 <div class="artist-block-name-container">
@@ -190,14 +190,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../">
-              <img src="../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../store">STORE</a>
-          <!-- <a href="../roster">ROSTER</a> -->
+          <a href="../roster">ROSTER</a>
           <a href="../about">ABOUT</a>
         </nav>
       </div>
@@ -205,7 +205,7 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
