--- a/store/mcr-011/index.html
+++ b/store/mcr-011/index.html
@@ -25,12 +25,12 @@
   <header class="header" data-expanded="false">
     <div class="logo">
       <a href="../../">
-        <img src="../../assets/images/header/header-logo.svg" alt="Logo">
+        <img src="../../assets/images/header/header-logo.svg" alt="Mystery Class Records Logo">
       </a>
     </div>
     <nav class="nav">
       <a href="../../store">STORE</a>
-      <!-- <a href="../../roster">ROSTER</a> -->
+      <a href="../../roster">ROSTER</a>
       <a href="../../about">ABOUT</a>
       <!-- <div class="cart-container">
         <div id="cart-button"></div>
@@ -38,7 +38,7 @@
     </nav>
     <div class="hamburger-icon">
       <button aria-label="Toggle Menu">
-        <img src="../../assets/images/header/hamburger-icon.svg" alt="Hamburger Menu">
+        <img src="../../assets/images/header/hamburger-icon.svg" alt="">
       </button>
     </div>
   </header>
@@ -529,14 +529,14 @@
         <div class="footer-logo-container">
           <div class="footer-logo">
             <a href="../../">
-              <img src="../../assets/images/footer/footer-logo.svg" alt="Footer Logo">
+              <img src="../../assets/images/footer/footer-logo.svg" alt="Mystery Class Records Logo">
             </a>
           </div>
           <div class="footer-vertical-separator"></div>
         </div>
         <nav class="footer-nav">
           <a href="../../store">STORE</a>
-          <!-- <a href="../../roster">ROSTER</a> -->
+          <a href="../../roster">ROSTER</a>
           <a href="../../about">ABOUT</a>
         </nav>
       </div>
@@ -544,7 +544,7 @@
       <div class="footer-bottom">
         <div class="footer-tagline">
           <p>UNEXPLAINABLY GOOD MUSIC.</p>
-          <img src="../../assets/images/footer/footer-icon.svg" alt="Footer Icon">
+          <img src="../../assets/images/footer/footer-icon.svg" alt="">
         </div>
         <div class="footer-copyright">
           <p>© COPYRIGHT 2024 MYSTERY CLASS RECORDS</p>
